--- a/src/styles.css
+++ b/src/styles.css
@@ -97,8 +97,10 @@ footer {
   line-height: 20px;
 }
 .weather-forecast-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperature {
   padding: 0 10px;
